# dqn-starter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notobooks/: debug-fixed-reward-custom-mutable-action.ipynb  debug-fixed-reward-custom.ipynb  debug-fixed-reward.ipynb  debug-ignore-losscut.ipynb  debug-loss.ipynb  debug-model-config.ipynb  debug-nonstationary-myta.ipynb  debug-nonstationary.ipynb  feature_config.ipynb  feature_engineering.ipynb  features.ipynb  spread.ipynb  task.ipynb
notobooks/ppo/: debug-fixed-reward-custom-mutable-action.ipynb  debug-ppo.ipynb  task.ipynb
scripts/: .gitignore  ppo.py
scripts/0810/: __main__.py
scripts/1week/: __main__.py  config.json
scripts/debug1min/: __main__.py  config.json
scripts/debug5min/: __main__.py
scripts/debuglagfeature/: __main__.py  config.json
scripts/debugload/: __main__.py
scripts/lagfeature/: config.json  multi.py  run.sh
scripts/lagfeature1/: config.json  multi.py
scripts/lagfeature_return/: multi.py  run.sh
scripts/lagfeature_return_force/: config.json  multi.py
scripts/lagfeature_sharpratio/: config.json  multi.py
scripts/ppo2sharpratio5min/: config.json  multi.py
scripts/ppobaseline3/: __main__.py  config.json
scripts/ppobaseline3debug/: __main__.py  config.json
scripts/ppobaseline3return/: __main__.py
scripts/ppobaseline3sharpratio/: __main__.py
scripts/ppobaseline3sharpratio1min/: __main__.py  config.json
scripts/ppobaseline3sharpratio5min/: __main__.py  config.json  multi.py
scripts/ppobaseline3sharprationorm5min/: __main__.py  (+1 more)
(+35 files in other folders)
